--- a/30 - Whack A Mole/style.css
+++ b/30 - Whack A Mole/style.css
@@ -67,3 +67,13 @@ h1 {
 .hole.up .mole {
   top: 0;
 }
+
+.startContainer {
+  position: absolute;
+  left: 10%;
+  top: 30%;
+  max-width: 500px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+}
